--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>H.O.P.E. Missions Ministries</title>
-  <base href="/">
+  <base href="/docs/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/lineicons-free-basic-3.0/icon-font/lineicons.css" rel="stylesheet">
